# AI-UI-GEN

./: .gitignore  README.md  pyproject.toml
Tools/: agent_api.py  end_user_chat.py  full_pipeline_cli.py  generated_app.tsx  generated_ir.json  generated_ir_realtest.json  ir_generation.py  ir_structure.py  ir_to_react.py  sample_ir.json
Tools/ir_pipeline/: __init__.py
Tools/ir_pipeline/agents/: __init__.py  clarification_agent.py  coverage_analyzer.py  ir_consistency_checker.py  ir_generator_agent.py  react_compiler_agent.py  requirement_extractor_agent.py  summary_agent.py  ui_critic_agent.py
Tools/ir_pipeline/graph/: __init__.py  conversation_graph.py  nodes.py  routing.py
Tools/ir_pipeline/llm/: __init__.py  client.py  model_config.py
Tools/ir_pipeline/prompts/: __init__.py  clarification_question.py  confirmation_summary.py  enriched_ir_request.py  frontend_design_policy.py  ir_generation.py  react_generation.py  requirements_extraction.py  ui_critic.py
Tools/ir_pipeline/schemas/: __init__.py  api_models.py  conversation.py  graph_state.py  ir_bundle.py  model_config.py
Tools/ir_pipeline/services/: __init__.py  conversation_service.py  ir_generation_service.py  react_generation_service.py  session_store.py  trace_store.py
Tools/ir_pipeline/utils/: __init__.py  extractors.py  ids.py  logger.py  normalization.py  time_utils.py
ui-compiler-poc/frontend/: package-lock.json
ui-compiler-poc/frontend/src/: App.realtest.tsx  App.tsx
