[project]
name = "uiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.56",
    "dotenv>=0.9.9",
    "fastapi>=0.132.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.3.0",
    "langgraph>=0.3.0",
    "langchain-openai>=1.1.10",
    "npm>=0.1.1",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
]
